<resources>
    <string name="Continue_playing">Continue playing</string>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="Downloads">Downloads</string>
    <string name="Enable">Enable</string>
    <string name="History">History</string>
    <string name="Join">Join</string>
    <string name="Joined">Joined</string>
    <string name="Leave">Leave</string>
    <string name="Library">Library</string>
    <string name="Nearby_Communities">Nearby Communities</string>
    <string name="New_post">New post:</string>
    <string name="Newest">Newest</string>
    <string name="Popular">Popular</string>
    <string name="Read_now">Read now</string>
    <string name="Related_Community">Related Community</string>
    <string name="Room_list">All List</string>
    <string name="Save">Save</string>
    <string name="Select_language">Select language</string>
    <string name="View">View</string>
    <string name="Your_location">Your location</string>
    <string name="Your_rooms">Your Joined</string>
    <string name="_12_5k_checkin">12.5K checkin</string>
    <string name="_72_5k_checkin">72.5K checkin</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abk4">0892</string>
    <string name="about_the_advertiser">About the advertiser</string>
    <string name="ad">AD</string>
    <string name="ad_close_ad">Close Ad?</string>
    <string name="ad_close_ad_2">Close Ad</string>
    <string name="ad_close_desc">"Are you sure?
You will lose your reward."</string>
    <string name="ad_icon">AD</string>
    <string name="ad_more_details">More Details</string>
    <string name="ad_no_network">Please try again connecting to the internet.</string>
    <string name="ad_release_to_enter_second_floor">Release to enter Second Floor</string>
    <string name="ad_release_to_refresh_keep_pulling_for_magic">Release to refresh Keep pulling for magic</string>
    <string name="ad_resume_ad">Resume Ad</string>
    <string name="ad_skip">Skip</string>
    <string name="ad_try_to_pull_for_magic">Try to pull for magic</string>
    <string name="ad_video_error">Network error, please check your network</string>
    <string name="add">Add</string>
    <string name="add_a_link">Add a link</string>
    <string name="add_img_max_tips">%d pictures maximum</string>
    <string name="add_media_max_size_tips">"Can't upload greater %dMB"</string>
    <string name="add_up_to">Add up to %d</string>
    <string name="add_video_max_tips">%d video clip maximum</string>
    <string name="added_to_list">Added to List</string>
    <string name="adults_content">"The content is restricted to 
18 and over"</string>
    <string name="adults_only">18+ Adults Only</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="al_exo_controls_previous_description">Previous</string>
    <string name="al_exo_controls_repeat_all_description">Repeat all</string>
    <string name="al_exo_controls_repeat_off_description">Repeat none</string>
    <string name="al_exo_controls_repeat_one_description">Repeat one</string>
    <string name="al_exo_controls_rewind_description">Rewind</string>
    <string name="al_exo_controls_seek_bar_description">Playback progress</string>
    <string name="al_exo_controls_settings_description">Settings</string>
    <string name="al_exo_controls_show">Show player controls</string>
    <string name="al_exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="al_exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="al_exo_controls_stop_description">Stop</string>
    <string name="al_exo_controls_time_placeholder">00:00:00</string>
    <string name="al_exo_controls_vr_description">VR mode</string>
    <string name="al_exo_download_completed">Download completed</string>
    <string name="al_exo_download_description">Download</string>
    <string name="al_exo_download_downloading">Downloading</string>
    <string name="al_exo_download_failed">Download failed</string>
    <string name="al_exo_download_notification_channel_name">Downloads</string>
    <string name="al_exo_download_paused">Downloads paused</string>
    <string name="al_exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="al_exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="al_exo_download_removing">Removing downloads</string>
    <string name="al_exo_item_list">%1$s, %2$s</string>
    <string name="al_exo_track_bitrate">%1$.2f Mbps</string>
    <string name="al_exo_track_mono">Mono</string>
    <string name="al_exo_track_resolution">%1$d × %2$d</string>
    <string name="al_exo_track_role_alternate">Alternate</string>
    <string name="al_exo_track_role_closed_captions">CC</string>
    <string name="al_exo_track_role_commentary">Commentary</string>
    <string name="al_exo_track_role_supplementary">Supplementary</string>
    <string name="al_exo_track_selection_auto">Auto</string>
    <string name="al_exo_track_selection_none">None</string>
    <string name="al_exo_track_selection_title_audio">Audio</string>
    <string name="al_exo_track_selection_title_text">Text</string>
    <string name="al_exo_track_selection_title_video">Video</string>
    <string name="al_exo_track_stereo">Stereo</string>
    <string name="al_exo_track_surround">Surround sound</string>
    <string name="al_exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="al_exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="al_exo_track_unknown">Unknown</string>
    <string name="all">All</string>
    <string name="all_game">All games</string>
    <string name="already_exists">Already exists</string>
    <string name="already_in_downloads">Already in the downloads</string>
    <string name="also_known_as">Also known as</string>
    <string name="analysing_from">Analysing from</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anr_tip">may occur and</string>
    <string name="app_center">App Center</string>
    <string name="app_name">MovieBox</string>
    <string name="app_version">null</string>
    <string name="back">Back</string>
    <string name="film_review_next">Next</string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="gps_tips">To include nearby places, turn on Location Services</string>
    <string name="gps_tips_btn">Turn on Location Services</string>
    <string name="gps_tips_title">See places near you</string>
    <string name="home_retry_text">Retry</string>
    <string name="login_interest_explore">Explore now</string>
    <string name="login_interest_tips">Tell us what you’re into</string>
    <string name="login_interest_tips2">to get better video recommendations</string>
    <string name="login_skip">skip</string>
    <string name="movie_detail_confirm_and_watch">Confirm and Watch</string>
    <string name="no_connection_restore_content_1">Explore various movies, TV series and more</string>
    <string name="no_connection_restore_content_2">All free download with less data but good quality</string>
    <string name="no_connection_restore_content_3">Watch offline without ads</string>
    <string name="no_connection_restore_title">When your internet connection is restored:</string>
    <string name="no_content">No content</string>
    <string name="no_network_title">Connect to the internet</string>
    <string name="no_subtitle_again">"Don't show it again"</string>
    <string name="notification">Notification</string>
    <string name="post_cancel">Cancel</string>
    <string name="post_confirm">Confirm</string>
    <string name="post_confirm_title">Your work will be deleted forever,confirm delete</string>
    <string name="profile_edit_gender_female">Female</string>
    <string name="profile_edit_gender_male">Male</string>
    <string name="profile_edit_gender_not_to_say">Prefer not to say</string>
    <string name="profile_see_del_cancel">Cancel</string>
    <string name="profile_see_del_confirm">Confirm</string>
    <string name="profile_see_del_tips">If you delete it, it will be deleted together with the post. Confirm to delete it?</string>
    <string name="select_image_grant_permission">Grant Permission ></string>
    <string name="select_image_no_permission">Please allow MovieBox permission to your storage to upload videos.You can go to \"Settings\">\"MovieBox\" to allow access.</string>
    <string name="upgrade_sdk_text_details">Details</string>
    <string name="upgrade_sdk_text_later">Later</string>
    <string name="upgrade_sdk_text_new_version">New Version</string>
    <string name="upgrade_sdk_text_size">Size</string>
    <string name="upgrade_sdk_text_title">Palm Store</string>
    <string name="upgrade_sdk_text_update">Update</string>
    <string name="upgrade_sdk_text_version">Version</string>
    <string name="upload_select_photos_title">Recent</string>
    <string name="video_float_tips">MovieBox needs Draw/Display over other apps permission to play the videos on the top of other apps.</string>
</resources>