<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/upgrade_round_corner_white_20dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxHeight="658.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/dp_18" android:textColor="@color/upgrade_dialog_title_color" android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" android:layout_marginBottom="@dimen/dp_12" android:text="@string/upgrade_sdk_text_new_version" android:fontFamily="sans-serif-medium" android:layout_marginStart="@dimen/dp_24" android:layout_marginEnd="@dimen/dp_24" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_12" android:layout_marginStart="@dimen/dp_24" android:layout_marginEnd="@dimen/dp_24">
        <ImageView android:id="@id/iv_icon" android:layout_width="@dimen/dp_56" android:layout_height="@dimen/dp_56" android:layout_marginTop="@dimen/dp_9" android:layout_marginBottom="@dimen/dp_9" android:src="@drawable/icon_update_sdk_default" android:layout_marginEnd="@dimen/dp_20" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_9">
            <TextView android:textSize="@dimen/dp_14" android:textColor="@color/upgrade_dialog_name" android:id="@id/tv_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upgrade_sdk_text_title" android:fontFamily="sans-serif-medium" />
            <TextView android:textSize="@dimen/dp_12" android:textColor="@color/upgrade_dialog_content" android:id="@id/tv_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_2" android:text="@string/upgrade_sdk_text_version" />
            <TextView android:textSize="@dimen/dp_12" android:textColor="@color/upgrade_dialog_content" android:id="@id/tv_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upgrade_sdk_text_size" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textSize="@dimen/dp_14" android:textColor="@color/upgrade_dialog_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upgrade_sdk_text_details" android:fontFamily="sans-serif-medium" android:layout_marginStart="@dimen/dp_24" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true">
            <TextView android:textSize="@dimen/dp_12" android:textColor="@color/upgrade_dialog_content" android:gravity="start|center" android:id="@id/tv_message" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_4" android:maxHeight="380.0dip" android:lineSpacingExtra="@dimen/dp_4" android:layout_marginStart="@dimen/dp_24" android:layout_marginEnd="@dimen/dp_24" />
        </ScrollView>
        <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:id="@id/layout_bottom" android:layout_width="fill_parent" android:layout_height="@dimen/dp_64" android:layout_marginTop="@dimen/dp_4">
            <TextView android:textSize="@dimen/dp_16" android:textStyle="normal" android:textColor="@color/upgrade_dialog_content" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/upgrade_sdk_text_later" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toStartOf="@id/tv_ok" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="@dimen/dp_16" android:textStyle="normal" android:textColor="@color/upgrade_dialog_bg_color" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_ok" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/upgrade_sdk_text_update" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tv_cancel" app:layout_constraintTop_toTopOf="parent" />
            <View android:background="@color/dialog_divider_line_bg" android:layout_width="1.0dip" android:layout_height="@dimen/dp_16" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>